--- a/.github/workflows/workflow-runners.yml
+++ b/.github/workflows/workflow-runners.yml
@@ -10,3 +10,12 @@ jobs:
               run: |
                 echo "running on ubuntu runner"
                 echo "Runner OS : $RUNNER_OS"
+
+    windows-os:
+        runs-on: windows-latest
+        steps:
+            - name: show os 
+              shell: bash
+              run : |
+                echo "running on ubuntu runner"
+                echo "Runner OS : $RUNNER_OS"
